2006-08-18 [paul]	0.5.4cvs1

	* configure.ac
		bump up GLib and GTK+ minimum required versions,
		following Claws

2006-06-12 [paul]	0.5.4

	0.5.4 released

2006-06-09 [wwp]	0.5.3cvs3

	* src/Makefile.am
		fixed accidentally removed EXTRA_DIST entry (my bad).

2006-06-06 [wwp]	0.5.3cvs2

	* configure.ac
	* src/.cvsignore
	* src/Makefile.am
	* src/plugin.c
	* src/plugin_version.h.in
		fix/unify/simplify autostuff, get rid of src/plugin_version.h{,.in} (use pluginconfig.h instead).

2006-06-03 [wwp]	0.5.3cvs1

	* commitHelper
	* PATCHSETS
		introducing commitHelper for plugins too.

2006-06-03 [colin] 	0.5.3

	* src/smime.c
		Make sure we have content before using it

2006-04-07 [colin] 	0.5.2

	* src/smime.c
		Fix handling of pkcs7-mime (signed-data)
		signatures

2006-04-07 [colin] 	0.5.1

	* configure.ac
		Optionnaly handle --prefix.
		Patch by Pawel Pekala.

2006-04-05 [colin]	0.5

	* First release