@@ -1,3 +1,8 @@
+2006-08-27 [colin]	0.5.4cvs2
+
+	* src/smime.c
+		Implement plugin_provides()
+
 2006-08-18 [paul]	0.5.4cvs1
 
 	* configure.ac
